--- a/app/src/main/res/layout/fragment_liste.xml
+++ b/app/src/main/res/layout/fragment_liste.xml
@@ -26,7 +26,9 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:onClick="yeniEkle"
+        android:contentDescription="Yeni tarif ekle"
         android:src="@android:drawable/ic_menu_add"
-        tools:layout_editor_absoluteX="324dp"
-        tools:layout_editor_absoluteY="549dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
